--- a/book_table/templates/book_table/base.html
+++ b/book_table/templates/book_table/base.html
@@ -39,57 +39,21 @@
     </div>
 </header>
 
-<section class="container-fluid logo">
-    <div class="row justify-content-center">
-      <div class="col-4">
-            <h1>DreamPoke</h1>
-            <h2>From hawaii, to you.</h2>
-            <!--https://www.pexels.com/photo/brown-mountains-2559941/-->
-          </div>
-        </div>
-    </div>
-</section>
+{% block content %}
+<!-- Content Goes here -->
+{% endblock content %}
 
-<section class="container-fluid text-center">
+<footer class="container-fluid">
   <div class="row">
-    <div class="col-12 col-md-4">
-      <div class="row">
-        <div class="col-12">
-          <img src="../static/images/poke_bowl.jpg" class="poke-image" alt="Poke bowl">
-        </div>
+      <div class="col-sm-4">
+        <h5> </h5>
       </div>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-    <div class="col-12 col-md-6 p-2">
-      <h3>Fresh</h3>
-      <p>All our ingredients are fresh. By this we mean straight from the local market to your bowl. 
-        You can feel the vitality of each ingredient in every bite, making you feel energised.
-      </p>
-    </div>
-    <div class="col-12 col-md-6 p-5">
-      <h3>Nutrient dense</h3>
-      <p> We choose our ingredients carfeully, making sure we cover the whole spectrum of micronutrients. 
-        Our options our full of "superfoods" and high quality proteins.
-      </p>
-    </div>
-    <div class="col-12 col-md-6 p-5">
-      <h3>Diet options</h3>
-      <p>We now how much effort you put into following a regime, so no need to worry when you come to
-        our restaurant! We have options for everyone: vegan, ketogenic, paleo... Check out our menu!
-      </p>
-    </div>
-    <div class="col-12 col-md-6 p-5">
-      <h3>Eco-friendly</h3>
-      <p>We reduce our impact on the planet as much as possible. The vegetables and meats come from local 
-        suppliers. The plastics used for our takeway bowls is recycled and can be recycled again after it's been used.
-      </p>
-    </div>
+  
+  
+           
+      </div>
   </div>
-  </div>
-</div>
-
-</section>
+</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
