--- a/book_table/templates/book_table/base.html
+++ b/book_table/templates/book_table/base.html
@@ -12,50 +12,60 @@
     <title>PokeDream</title>
 </head>
 <body>
-    <header>
-    <div class="row no-gutters">
-    <div class="fixed-top">
-        <nav class="navbar navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </nav>
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Menu</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Log In</a>
-                </li>
-              </ul>
-          </div>
+  <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar w/ text</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Log In</a>
+            </li>
+          </ul>
         </div>
-    </div>
-    </div>
+      </nav>
 </header>
 
 {% block content %}
 <!-- Content Goes here -->
 {% endblock content %}
 
-<footer class="container-fluid">
+<footer class="container-fluid text-center mt-4 pt-4">
   <div class="row">
-      <div class="col-sm-4">
-        <h5> </h5>
-      </div>
-  
-  
-           
-      </div>
+      <div class="col-12">
+        <h5>Hawaii is closer than you think </h5>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+              <a target="_blank" href="#">
+                  <i class="fa-brands fa-linkedin"></i>
+                  <span class="sr-only">Linkedin</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+              <a target="_blank" href="#">
+                  <i class="fa-brands fa-github"></i>
+                  <span class="sr-only">Github</span>
+              </a>
+          </li>
+          <li class="list-inline-item">
+              <a target="_blank" href="#">
+                  <i class="fa-brands fa-spotify"></i>
+                  <span class="sr-only">Spotify</span>
+              </a>
+          </li>
   </div>
+</div>
 </footer>
 
-
+  <script src="https://kit.fontawesome.com/0393cc7668.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
