--- a/book_table/templates/book_table/menu.html
+++ b/book_table/templates/book_table/menu.html
@@ -3,8 +3,11 @@
 {% block content %}
 <section>
   <div class="row menu-header">
-    <div class="col">
-      <h2>Menu</h2>
+    <div class="col salmon-filter">
+      <div class="picture-title salmon-color">
+        <h1>Pokedream menu</h1>
+        <p>Check out our delicious ingredients</p>
+      </div>
     </div>
   </div>
 </section>
@@ -20,7 +23,7 @@
              <a href="#carouselExampleIndicators" data-slide-to="4"> <li> Sauce </li></a>
             </ol>
         </div>
-        <div class="col-md-8 ">
+        <div class="col-md-8">
             <div id="carouselExampleIndicators" class="carousel slide carousel-menu" data-ride="carousel">
                 <ol class="carousel-indicators no-bullet">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
