--- a/book_table/templates/book_table/base.html
+++ b/book_table/templates/book_table/base.html
@@ -38,7 +38,7 @@
 <!-- Content Goes here -->
 {% endblock content %}
 
-<footer class="container-fluid text-center mt-4 pt-4">
+<footer class="container-fluid text-center mt-4 pt-4  navbar-dark bg-dark">
   <div class="row">
       <div class="col-12">
         <h5>Hawaii is closer than you think </h5>
