--- a/book_table/templates/book_table/menu.html
+++ b/book_table/templates/book_table/menu.html
@@ -12,27 +12,35 @@
   </div>
 </section>
 <section id="made-poke">
-<div class="row">
+  <h3 class="text-center">Already made poke</h3>
+<div class="row no-gutters">
   <div class="col-md-6">
-    <h4>Honolulu</h4>
-    <p>Rice, doble salmon, avocado, wakame seaweed, ginger, spicy mayo</p>
-
-    <h4>Waikiki</h4>
-    <p>Kale, salmon, prawns, cucumber, edamame, pineapple, sweet chilly</p>
-  
-    <h4>Maui</h4>
-    <p> Quinoa, chicken, eggs, mango, carrots, pumpkin seeds, honey and mustard</p>
-  
+    <div class="made-choice">
+      <h4>Honolulu</h4>
+      <p>Rice, doble salmon, avocado, wakame seaweed, ginger, spicy mayo</p>
+    </div>
+    <div class="made-choice">
+      <h4>Waikiki</h4>
+      <p>Kale, salmon, prawns, cucumber, edamame, pineapple, sweet chilly</p>
+    </div>
+    <div class="made-choice">
+      <h4>Maui</h4>
+      <p> Quinoa, chicken, eggs, mango, carrots, pumpkin seeds, honey and mustard</p>
+    </div>
   </div>
   <div class="col-md-6">
-    <h4>Vegan power</h4>
-    <p>Lettuce, double heura, avocado, mango, pineaple, ginger, spicy mayo</p>
-  
-    <h4>Spicy Tuna</h4>
-    <p>Rice, double tuna, ginger, carrots, edamame, pumpkin seeds, spicy mayo</p>
-  
-    <h4>Creamy chicken</h4>
-    <p>Quinoa, double chicken, avocado, mango, betroot, honey and mustard</p>
+    <div class="made-choice">
+      <h4>Vegan power</h4>
+      <p>Lettuce, double heura, avocado, mango, pineaple, ginger, spicy mayo</p>
+    </div>
+    <div class="made-choice">
+      <h4>Spicy Tuna</h4>
+      <p>Rice, double tuna, ginger, carrots, edamame, pumpkin seeds, spicy mayo</p>
+    </div>
+    <div class="made-choice">
+      <h4>Creamy chicken</h4>
+      <p>Quinoa, double chicken, avocado, mango, betroot, honey and mustard</p>
+    </div>
   </div>
 </div>
 </section>
