Add styling premade menu

--- a/book_table/templates/book_table/menu.html
+++ b/book_table/templates/book_table/menu.html
@@ -11,35 +11,41 @@
     </div>
   </div>
 </section>
-<section id="made-poke">
+<section id="made-poke" class="cream-colour">
   <h3 class="text-center">Already made poke</h3>
+
+<div class="row no-gutters">
+  <div class="col">
+    <p class="text-center">Small - 8€ / Medium - 10€ / Large - 12€ / Giant - 15€</p>
+  </div>
+</div>
 <div class="row no-gutters">
   <div class="col-md-6">
     <div class="made-choice">
-      <h4>Honolulu</h4>
-      <p>Rice, doble salmon, avocado, wakame seaweed, ginger, spicy mayo</p>
+      <h4>Honolulu <i class="fa-solid fa-fish"></i> <i class="fa-solid fa-egg"></i></h4>
+      <p>Rice, double salmon, avocado, wakame seaweed, ginger, spicy mayo</p>
     </div>
     <div class="made-choice">
-      <h4>Waikiki</h4>
-      <p>Kale, salmon, prawns, cucumber, edamame, pineapple, sweet chilly</p>
+      <h4>Waikiki <i class="fa-solid fa-fish"></i> <i class="fa-solid fa-wheat-awn"></i> <i class="fa-solid fa-shrimp"></i> </h4>
+      <p>Kale, salmon, prawns, cucumber, edamame, pineapple, beetroot, soy</p>
     </div>
     <div class="made-choice">
-      <h4>Maui</h4>
-      <p> Quinoa, chicken, eggs, mango, carrots, pumpkin seeds, honey and mustard</p>
+      <h4>Maui <i class="fa-solid fa-egg"></i> </h4>
+      <p> Quinoa, chicken, eggs, sauerkraut, mango, carrots, pumpkin seeds, honey and mustard</p>
     </div>
   </div>
   <div class="col-md-6">
     <div class="made-choice">
-      <h4>Vegan power</h4>
-      <p>Lettuce, double heura, avocado, mango, pineaple, ginger, spicy mayo</p>
+      <h4>Vegan power <i class="fa-solid fa-seedling"></i> <i class="fa-solid fa-wheat-awn"></i></h4>
+      <p>Lettuce, double tofu, avocado, mango, pineapple, ginger, soy</p>
     </div>
     <div class="made-choice">
-      <h4>Spicy Tuna</h4>
+      <h4>Spicy Tuna <i class="fa-solid fa-fish"></i> <i class="fa-solid fa-egg"></i> </h4>
       <p>Rice, double tuna, ginger, carrots, edamame, pumpkin seeds, spicy mayo</p>
     </div>
     <div class="made-choice">
-      <h4>Creamy chicken</h4>
-      <p>Quinoa, double chicken, avocado, mango, betroot, honey and mustard</p>
+      <h4>Creamy chicken <i class="fa-solid fa-wheat-awn"></i></h4>
+      <p>Barley, double chicken, avocado, mango, betroot, honey and mustard</p>
     </div>
   </div>
 </div>
