--- a/book_table/static/css/style.css
+++ b/book_table/static/css/style.css
@@ -16,6 +16,10 @@
     background-color: rgba(234,238,255, 0.7);
 }
 
+.cream-colour {
+    background-color: rgb(255,240,201);
+}
+
 .white-text {
     color: white;
 }
@@ -78,12 +82,12 @@
 }
 
 #made-poke {
-    margin: 50px 0 50px 0;
+    padding: 50px 0 50px 0;
 }
 
 .made-choice{
     width: 70%;
-    margin:auto;
+    margin: auto;
     padding: 15px;
 }
 
