--- a/book_table/templates/book_table/index.html
+++ b/book_table/templates/book_table/index.html
@@ -3,9 +3,10 @@
 {% block content %}
 
 
-<section class="container-fluid logo">
-    <div class="row justify-content-center">
-      <div class="col-4">
+<section>
+    <div class="row logo no-gutters">
+      <div class="col">
+        <div class="picture-title salmon-color">
             <h1>DreamPoke</h1>
             <h2>From hawaii, to you.</h2>
             <!--https://www.pexels.com/photo/brown-mountains-2559941/-->
@@ -14,37 +15,37 @@
     </div>
 </section>
 
-<section class="container-fluid text-center  pt-5">
-    <div class="row">
+<section class="cream-colour text-center">
+    <div class="row no-gutters">
       <div class="col-12 col-md-4">
         <div class="row">
           <div class="col-12">
-            <img src="../static/images/poke_bowl.jpg" class="poke-image" alt="Poke bowl">
+            <img src="../static/images/poke-sauce.jpg" class="poke-image" alt="Poke bowl">
           </div>
         </div>
       </div>
       <div class="col-12 col-md-8">
         <div class="row">
       <div class="col-12 col-md-6 p-5">
-        <h3>Fresh</h3>
+        <h3><i class="fa-solid fa-seedling"></i> Fresh </h3>
         <p>All our ingredients are fresh. By this we mean straight from the local market to your bowl. 
           You can feel the vitality of each ingredient in every bite, making you feel energised.
         </p>
       </div>
       <div class="col-12 col-md-6 p-5">
-        <h3>Nutrient dense</h3>
+        <h3><i class="fa-solid fa-bolt"></i> Nutrient dense</h3>
         <p> We choose our ingredients carfeully, making sure we cover the whole spectrum of micronutrients. 
-          Our options our full of "superfoods" and high quality proteins.
+          Our options are full of "superfoods" and high quality proteins.
         </p>
       </div>
       <div class="col-12 col-md-6 p-5">
-        <h3>Diet options</h3>
+        <h3><i class="fa-solid fa-utensils"></i> Diet options</h3>
         <p>We now how much effort you put into following a regime, so no need to worry when you come to
           our restaurant! We have options for everyone: vegan, ketogenic, paleo... Check out our menu!
         </p>
       </div>
       <div class="col-12 col-md-6 p-5">
-        <h3>Eco-friendly</h3>
+        <h3><i class="fa-solid fa-leaf"></i> Eco-friendly</h3>
         <p>We reduce our impact on the planet as much as possible. The vegetables and meats come from local 
           suppliers. The plastics used for our takeway bowls is recycled and can be recycled again after it's been used.
         </p>
